# GfmEngine

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: build-ubuntu20-docker.sh.in  build-using-docker.sh.in  launch.json.in  tasks.json.in
docker-build/ubuntu20/: Dockerfile
docs/: ProblemsFixed.md  clang-format.md
include/: GfmEngine.h
include/Components/: TransformComponent.h  VelocityComponent.h
include/ECSCore/: Component.h  Entity.h  EntityManager.h
include/Systems/: MovementSystem.h
src/: GfmEngine.cpp
src/ECSCore/: Entity.cpp  EntityManager.cpp
src/Systems/: MovementSystem.cpp
test/: CMakeLists.txt  main.cpp
test/include/: TestGame.h
test/src/: TestGame.cpp  main.cpp
